--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   redux: ^3.0.0
+  redux_thunk: ^0.2.1
   flutter_redux: ^0.5.3
   firebase_core: ^0.2.5
   cloud_firestore: ^0.8.2+3
