--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.0"
+
+flutter_icons:
+  android: true
+  image_path: "assets/icons/android/playstore-icon.png"
+
 
 
 # For information on the generic Dart part of this file, see the
