--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cloud_firestore: ^0.8.2+3
   cloud_functions: ^0.0.5
   firebase_auth: ^0.6.6
+  flutter_slidable: ^0.4.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
