--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter_slidable: ^0.4.9
   intl: ^0.15.8
   sticky_headers: ^0.1.7
+  shared_preferences: ^0.5.3+1
+  redux_logging: ^0.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
