--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   redux_thunk: ^0.2.1
   flutter_redux: ^0.5.3
   firebase_core: ^0.4.0+3
-  cloud_firestore: ^0.12.3
+  cloud_firestore: ^0.12.5+2
   cloud_functions: ^0.4.0
   firebase_auth: ^0.11.1+6
   flutter_slidable: ^0.4.9
@@ -27,6 +27,7 @@ dependencies:
   sticky_headers: ^0.1.7
   shared_preferences: ^0.5.3+1
   redux_logging: ^0.3.0
+  timeago: ^2.0.16
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
