--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   timeago: ^2.0.16
   circular_check_box: ^0.0.2
   flutter_markdown: ^0.2.0
+  quiver: ^2.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
