--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   redux_thunk: ^0.2.1
   flutter_redux: ^0.5.3
   firebase_core: ^0.4.0+3
-  cloud_firestore: ^0.12.5+2
+  cloud_firestore: ^0.12.7
   cloud_functions: ^0.4.0
   firebase_auth: ^0.11.1+6
   flutter_slidable: ^0.4.9
@@ -33,6 +33,7 @@ dependencies:
   quiver: ^2.0.2
   in_app_purchase: ^0.2.0+2
   flutter_swiper: ^1.1.6
+  flutter_local_notifications: ^0.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
