--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,8 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath 'com.google.gms:google-services:3.2.1'  // Google Services plugin
+        classpath 'com.google.gms:google-services:4.3.3'    // Google Services plugin
+        // classpath 'com.google.gms:google-services:3.2.1'  // Google Services plugin - Seemed to cause the 'Shrinker failed to optimize code AssembleDebug error.'
     }
 }
 
