--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,10 @@ dependencies:
   redux: ^3.0.0
   redux_thunk: ^0.2.1
   flutter_redux: ^0.5.3
-  firebase_core: ^0.4.0+3
-  cloud_firestore: ^0.12.7
-  cloud_functions: ^0.4.0
-  firebase_auth: ^0.11.1+6
+  firebase_core: ^0.4.3+1
+  cloud_firestore: ^0.13.0+1
+  cloud_functions: ^0.4.1+6
+  firebase_auth: ^0.15.3
   flutter_slidable: ^0.4.9
   intl: ^0.15.8
   sticky_headers: ^0.1.7
@@ -31,9 +31,9 @@ dependencies:
   circular_check_box: ^0.0.2
   flutter_markdown: ^0.2.0
   quiver: ^2.0.2
-  in_app_purchase: ^0.2.0+2
+  in_app_purchase: ^0.2.2+4
   flutter_swiper: ^1.1.6
-  flutter_local_notifications: ^0.8.0
+  flutter_local_notifications: ^0.9.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
