--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   flutter_local_notifications: ^0.9.0+1
   quick_actions: ^0.4.0+1
+  firebase_dynamic_links: ^0.5.0+11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
