--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ android/key.properties
 .pub-cache/
 .pub/
 build/
+.flutter-plugins-dependencies
 
 # Android related
 **/android/**/gradle-wrapper.jar
